--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,8 @@ html {
   font-style: normal;
   font-weight: 300;
   src: local("WiproAkkuratTT-Light"),
-    url(./fonts/WiproAkkuratWeb-Light.woff2) format("woff2"),
-    url(./fonts/WiproAkkuratWeb-Light.woff) format("woff")
+    url(assets/fonts/WiproAkkuratWeb-Light.woff2) format("woff2"),
+    url(assets/fonts/WiproAkkuratWeb-Light.woff) format("woff")
 }
 
 @font-face {
@@ -15,8 +15,8 @@ html {
   font-style: italic;
   font-weight: 300;
   src: local("WiproAkkuratTT-LightItalic"),
-    url(./fonts/WiproAkkuratWeb-Italic.woff2) format("woff2"),
-    url(./fonts/WiproAkkuratWeb-Italic.woff) format("woff")
+    url(assets/fonts/WiproAkkuratWeb-Italic.woff2) format("woff2"),
+    url(assets/fonts/WiproAkkuratWeb-Italic.woff) format("woff")
 }
 
 @font-face {
@@ -24,8 +24,8 @@ html {
   font-style: normal;
   font-weight: 400;
   src: local("WiproAkkuratTT-Regular"),
-    url(./fonts/WiproAkkuratWeb-Regular.woff2) format("woff2"),
-    url(./fonts/WiproAkkuratWeb-Regular.woff) format("woff")
+    url(assets/fonts/WiproAkkuratWeb-Regular.woff2) format("woff2"),
+    url(assets/fonts/WiproAkkuratWeb-Regular.woff) format("woff")
 }
 
 @font-face {
@@ -33,8 +33,8 @@ html {
   font-style: italic;
   font-weight: 400;
   src: local("WiproAkkuratTT-Italic"),
-    url(./fonts/WiproAkkuratWeb-Italic.woff2) format("woff2"),
-    url(./fonts/WiproAkkuratWeb-Italic.woff) format("woff")
+    url(assets/fonts/WiproAkkuratWeb-Italic.woff2) format("woff2"),
+    url(assets/fonts/WiproAkkuratWeb-Italic.woff) format("woff")
 }
 
 @font-face {
@@ -42,8 +42,8 @@ html {
   font-style: normal;
   font-weight: 700;
   src: local("WiproAkkuratTT-Bold"),
-    url(./fonts/WiproAkkuratWeb-Bold.woff2) format("woff2"),
-    url(./fonts/WiproAkkuratWeb-Bold.woff) format("woff")
+    url(assets/fonts/WiproAkkuratWeb-Bold.woff2) format("woff2"),
+    url(assets/fonts/WiproAkkuratWeb-Bold.woff) format("woff")
 }
 
 @font-face {
@@ -51,8 +51,8 @@ html {
   font-style: italic;
   font-weight: 700;
   src: local("WiproAkkuratTT-BoldItalic"),
-    url(./fonts/WiproAkkuratWeb-BoldItalic.woff2) format("woff2"),
-    url(./fonts/WiproAkkuratWeb-BoldItalic.woff) format("woff")
+    url(assets/fonts/WiproAkkuratWeb-BoldItalic.woff2) format("woff2"),
+    url(assets/fonts/WiproAkkuratWeb-BoldItalic.woff) format("woff")
 }
 
 @font-face {
@@ -60,6 +60,6 @@ html {
   font-style: normal;
   font-weight: 400;
   src: local("WiproAkkuratMonoTT-Regular"),
-    url(./fonts/WiproAkkuratMonoWeb-Regular.woff2) format("woff2"),
-    url(./fonts/WiproAkkuratMonoWeb-Regular.woff) format("woff")
+    url(assets/fonts/WiproAkkuratMonoWeb-Regular.woff2) format("woff2"),
+    url(assets/fonts/WiproAkkuratMonoWeb-Regular.woff) format("woff")
 }
