--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,12 @@
 html {
   font-size: 62.5%; /* 62.5% of 16px = 10px */
 }
+
+a {
+  color: inherit;
+  text-decoration: inherit;
+}
+
 @font-face {
   font-family: 'Wipro Akkurat TT';
   font-style: normal;
